fix(item): move label and highlight item when focused with tab

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -375,6 +375,8 @@ button, a {
   pointer-events: none;
 }
 
+:host(.ion-focused) .item-highlight,
+:host(.ion-focused) .item-inner-highlight,
 :host(.item-has-focus) .item-highlight,
 :host(.item-has-focus) .item-inner-highlight {
   transform: scaleX(1);
@@ -383,22 +385,27 @@ button, a {
   border-color: var(--highlight-background);
 }
 
+:host(.ion-focused) .item-highlight,
 :host(.item-has-focus) .item-highlight {
   border-width: var(--full-highlight-height);
 
   opacity: var(--show-full-highlight);
 }
 
+:host(.ion-focused) .item-inner-highlight,
 :host(.item-has-focus) .item-inner-highlight {
   border-bottom-width: var(--inset-highlight-height);
 
   opacity: var(--show-inset-highlight);
 }
 
+:host(.ion-focused.item-fill-solid) .item-highlight,
 :host(.item-has-focus.item-fill-solid) .item-highlight {
   border-width: calc(var(--full-highlight-height) - 1px);
 }
 
+:host(.ion-focused) .item-inner-highlight,
+:host(.ion-focused:not(.item-fill-outline)) .item-highlight,
 :host(.item-has-focus) .item-inner-highlight,
 :host(.item-has-focus:not(.item-fill-outline)) .item-highlight {
   border-top: none;
@@ -410,6 +417,7 @@ button, a {
 // Item Input Focused
 // --------------------------------------------------
 
+:host(.item-interactive.ion-focused),
 :host(.item-interactive.item-has-focus),
 :host(.item-interactive.ion-touched.ion-invalid) {
   // If the item has a full border and highlight is enabled, show the full item highlight
@@ -422,6 +430,7 @@ button, a {
 // Item Input Focus
 // --------------------------------------------------
 
+:host(.item-interactive.ion-focused),
 :host(.item-interactive.item-has-focus) {
   --highlight-background: var(--highlight-color-focused);
 }
