--- a/core/src/components/select/select.md.scss
+++ b/core/src/components/select/select.md.scss
@@ -14,8 +14,22 @@
 .select-icon {
   width: 19px;
   height: 19px;
+
+  opacity: .55;
 }
 
 :host-context(.item-label-floating) .select-icon {
   @include transform(translate3d(0, -9px, 0));
+}
+
+:host-context(.item-label-floating.item-has-focus) .select-icon {
+  transition: transform .15s cubic-bezier(.4,0,.2,1),-webkit-transform .15s cubic-bezier(.4,0,.2,1);
+
+  @include transform(rotate(180deg), translate3d(0, 0px, 0));
+}
+
+:host-context(.item-label-floating.ion-focused) .select-icon,
+:host-context(.item-label-floating.item-has-focus) .select-icon {
+  color: var(--highlight-color-focused);
+  opacity: 1;
 }
