Squashed commit of the following:
commit 71050598d3c48f34e141ee09279d6ca3a6a37364
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jun 29 18:27:14 2021 -0300

    ajustes fab

commit 284184ec6b481a6455ddc49c0386e1bdae004d47
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Tue Jun 29 18:27:06 2021 -0300

    Ajustes chip e fab button

commit aaa07ae5b420696a191e680c890b500a3c09c7f2
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Mon Jun 28 18:26:19 2021 -0300

    revisão chip

commit c0fd4012eade700541f40355285d28aa19707ec3
Author: alexbjr369 <alexbjr369@gmail.com>
Date:   Mon Jun 28 16:34:30 2021 -0300

    Revisão componentes

--- a/core/med-components/themes/medsoft-theme.scss
+++ b/core/med-components/themes/medsoft-theme.scss
@@ -3,8 +3,8 @@
 @import "../mixins";
 
 :root .dark-mode {
-  --on-surface: #fff;
-  --surface: #121212;
+  /* --on-surface: #fff;
+  --surface: #121212; */
 
   ion-content {
     --background: #141414;
@@ -12,8 +12,8 @@
 }
 
 :root .light-mode {
-  --on-surface: #121212;
-  --surface: #fff;
+  /* --on-surface: #121212;
+  --surface: #fff; */
 
   ion-content {
     --background: #fafafa;
