--- a/core/src/components/fab-button/fab-button.med.scss
+++ b/core/src/components/fab-button/fab-button.med.scss
@@ -1,15 +1,17 @@
 @import "../../../med-components/abstracts";
 
 :host {
-  --background: #{$med-color-neutral-dark-40};
+  // ionic css custom properties
+  --background: #{medsoft-color(neutral-dark, 40)};
+  --background-activated-opacity: #{$med-opacity-level-medium};
+  --background-hover-opacity: #{$med-opacity-level-light};
+
   --padding-bottom: #{$med-spacing-inset-xs};
   --padding-end: #{$med-spacing-inset-xs};
   --padding-start: #{$med-spacing-inset-xs};
   --padding-top: #{$med-spacing-inset-xs};
   --border-radius: #{$med-border-radius-pill};
   --box-shadow: #{$med-shadow-level-2};
-  --background-activated-opacity: #{$med-opacity-level-medium};
-  --background-hover-opacity: #{$med-opacity-level-light};
   --ripple-color: transparent;
 
   height: 40px;
@@ -27,20 +29,21 @@
 }
 
 :host(.fab-button-disabled) {
+  --background: #{medsoft-color(neutral-light, 20)};
   opacity: #{$med-opacity-level-semiopaque};
-  --background: #{$med-color-neutral-light-20};
+
   ::slotted(ion-icon) {
-    fill: $med-color-neutral-light-prime;
+    fill: #{medsoft-color(neutral-light, prime)};
   }
 }
 
 ::slotted(ion-label) {
+  color: medsoft-color(neutral-light, prime);
   padding-left: $med-spacing-inline-xxxs;
   padding-right: $med-spacing-inline-xxxs;
   font-size: $med-font-size-xxs;
   font-weight: $med-font-weight-semibold;
   line-height: $med-line-height-compressed;
-  color: $med-color-neutral-light-prime;
 }
 
 :host(.fab-button-close-active) {
@@ -53,6 +56,7 @@
 :host([ds-size="md"]) {
   height: 48px !important;
   min-width: 48px !important;
+
   ::slotted(ion-label) {
     padding-left: $med-spacing-inline-base;
     padding-right: $med-spacing-inline-base;
@@ -62,18 +66,11 @@
 :host([ds-size="lg"]) {
   height: 56px !important;
   min-width: 56px !important;
+
   ::slotted(ion-label) {
     padding-left: $med-spacing-inline-base;
     padding-right: $med-spacing-inline-base;
   }
-}
-
-:host([ds-name="label"]) {
-  //--color: red;
-}
-
-:host([ds-name="icon-label"]) {
-  //--color: red;
 }
 
 :host(.fab-button-close-active) ::slotted([slot="label"]) {
