--- a/core/src/components/medgrupo/team/med-cartao-resposta-item/med-cartao-resposta-item.scss
+++ b/core/src/components/medgrupo/team/med-cartao-resposta-item/med-cartao-resposta-item.scss
@@ -108,7 +108,7 @@ slot[name] {
 }
 
 :host(.ion-color) {
-  --color: #{current-color(base)};
+  --color: #{medsoft-current-color(medium)};
 }
 
 :host([class^="ion-color"]) {
