--- a/core/src/components/toast/toast.med.scss
+++ b/core/src/components/toast/toast.med.scss
@@ -104,6 +104,6 @@
 }
 
 :host(.ion-color) .toast-wrapper {
-  background: #{medsoft-current-color(medium)};;
+  background: #{medsoft-current-color(medium)};
 }
 
