fix(select): highlight and rotate dropdown arrow for other labels

--- a/core/src/components/select/test/spec/index.html
+++ b/core/src/components/select/test/spec/index.html
@@ -188,6 +188,225 @@
           </ion-item>
         </div>
       </div>
+
+      <hr>
+
+      <h1>Inline Selects</h1>
+
+      <div class="grid">
+        <div class="column">
+          <h2>Default</h2>
+
+          <ion-item>
+            <ion-label>Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Default: Focused</h2>
+
+          <ion-item class="ion-focused">
+            <ion-label>Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Filled</h2>
+
+          <ion-item fill="solid">
+            <ion-label>Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Filled: Focused</h2>
+
+          <ion-item fill="solid" class="ion-focused">
+            <ion-label>Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Outlined</h2>
+
+          <ion-item fill="outline">
+            <ion-label>Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Outlined: Focused</h2>
+
+          <ion-item fill="outline" class="ion-focused">
+            <ion-label>Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+      </div>
+
+      <hr>
+
+      <h1>Fixed Selects</h1>
+
+      <div class="grid">
+        <div class="column">
+          <h2>Default</h2>
+
+          <ion-item>
+            <ion-label position="fixed">Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Default: Focused</h2>
+
+          <ion-item class="ion-focused">
+            <ion-label position="fixed">Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Filled</h2>
+
+          <ion-item fill="solid">
+            <ion-label position="fixed">Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Filled: Focused</h2>
+
+          <ion-item fill="solid" class="ion-focused">
+            <ion-label position="fixed">Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Outlined</h2>
+
+          <ion-item fill="outline">
+            <ion-label position="fixed">Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+        <div class="column">
+          <h2>Outlined: Focused</h2>
+
+          <ion-item fill="outline" class="ion-focused">
+            <ion-label position="fixed">Fruit</ion-label>
+            <ion-select interface="popover">
+              <ion-select-option></ion-select-option>
+              <ion-select-option value="apple">Apple</ion-select-option>
+              <ion-select-option value="orange">Orange</ion-select-option>
+              <ion-select-option value="banana">Banana</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </div>
+      </div>
+
+      <hr>
+
+      <h1>Full Width Selects</h1>
+
+      <ion-list>
+        <ion-item>
+          <ion-label>Inline</ion-label>
+          <ion-select interface="popover">
+            <ion-select-option></ion-select-option>
+            <ion-select-option value="apple">Apple</ion-select-option>
+            <ion-select-option value="orange">Orange</ion-select-option>
+            <ion-select-option value="banana">Banana</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+
+        <ion-item>
+          <ion-label position="fixed">Fixed</ion-label>
+          <ion-select interface="popover">
+            <ion-select-option></ion-select-option>
+            <ion-select-option value="apple">Apple</ion-select-option>
+            <ion-select-option value="orange">Orange</ion-select-option>
+            <ion-select-option value="banana">Banana</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Floating</ion-label>
+          <ion-select interface="popover">
+            <ion-select-option></ion-select-option>
+            <ion-select-option value="apple">Apple</ion-select-option>
+            <ion-select-option value="orange">Orange</ion-select-option>
+            <ion-select-option value="banana">Banana</ion-select-option>
+          </ion-select>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="stacked">Stacked</ion-label>
+          <ion-select interface="popover">
+            <ion-select-option></ion-select-option>
+            <ion-select-option value="apple">Apple</ion-select-option>
+            <ion-select-option value="orange">Orange</ion-select-option>
+            <ion-select-option value="banana">Banana</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
+
+      <div class="margin-bottom-extra"></div>
     </ion-content>
   </ion-app>
 
@@ -214,10 +433,10 @@
     }
 
     hr {
+      border: none;
       background: #eff1f3;
-
-      margin-top: 18px;
-      margin-bottom: 25px;
+      height: 1px;
+      margin: 18px 16px 25px 16px;
     }
 
     .grid {
@@ -226,6 +445,10 @@
       row-gap: 20px;
       column-gap: 20px;
       padding: 0 20px 20px;
+    }
+
+    .margin-bottom-extra {
+      margin-bottom: 300px;
     }
   </style>
 </body>
