--- a/core/src/components/select/select.md.scss
+++ b/core/src/components/select/select.md.scss
@@ -22,14 +22,14 @@
   @include transform(translate3d(0, -9px, 0));
 }
 
-:host-context(.item-label-floating.item-has-focus) .select-icon {
+:host-context(.item-has-focus) .select-icon {
   transition: transform .15s cubic-bezier(.4,0,.2,1),-webkit-transform .15s cubic-bezier(.4,0,.2,1);
 
   @include transform(rotate(180deg), translate3d(0, 0px, 0));
 }
 
-:host-context(.item-label-floating.ion-focused) .select-icon,
-:host-context(.item-label-floating.item-has-focus) .select-icon {
+:host-context(ion-item.ion-focused) .select-icon,
+:host-context(.item-has-focus) .select-icon {
   color: var(--highlight-color-focused);
   opacity: 1;
 }
