--- a/core/src/components/datetime/test/time-label/index.html
+++ b/core/src/components/datetime/test/time-label/index.html
@@ -3,52 +3,58 @@
   <head>
     <meta charset="UTF-8">
     <title>Datetime - Time label</title>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <link href="../../../../../css/ionic.bundle.css" rel="stylesheet">
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet">
     <script src="../../../../../scripts/testing/scripts.js"></script>
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
     <style>
-        h2 {
-            font-size: 12px;
-            font-weight: normal;
+      .grid {
+        display: grid;
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
+        grid-gap: 20px;
+      }
+      h2 {
+        font-size: 12px;
+        font-weight: normal;
 
-            color: #6f7378;
+        color: #6f7378;
 
-            margin-top: 10px;
-            margin-left: 5px;
-        }
+        margin-top: 10px;
+        margin-left: 5px;
+      }
 
-        ion-datetime {
-            box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 8px 16px rgba(0, 0, 0, 0.25);
-            border-radius: 8px;
-        }
+      ion-datetime {
+        box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 8px 16px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;
+      }
     </style>
   </head>
-<body>
-<ion-app>
-    <ion-header translucent="true">
+  <body>
+    <ion-app>
+      <ion-header translucent="true">
         <ion-toolbar>
-            <ion-title>Datetime - Time label</ion-title>
+          <ion-title>Datetime - Time Label</ion-title>
         </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">
-        <div>
-            <h2>showDefaultTimeLabel="true"</h2>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <div class="grid">
+          <div class="grid-item">
+            <h2>Default Time Label</h2>
             <ion-datetime show-default-time-label="true"></ion-datetime>
-        </div>
-        <div>
-            <h2>showDefaultTimeLabel="false"</h2>
+          </div>
+          <div class="grid-item">
+            <h2>No Default Time Label</h2>
             <ion-datetime show-default-time-label="false"></ion-datetime>
-        </div>
-        <div>
+          </div>
+          <div class="grid-item">
             <h2>Custom Time Label</h2>
             <ion-datetime>
-                <span slot="time-label">Custom Text</span>
+              <div slot="time-label">Custom Time</div>
             </ion-datetime>
+          </div>
         </div>
-    </ion-content>
-</ion-app>
-</body>
+      </ion-content>
+    </ion-app>
+  </body>
 </html>
