--- a/core/src/components/range/test/basic/index.html
+++ b/core/src/components/range/test/basic/index.html
@@ -185,7 +185,7 @@
           </ion-label>
         </ion-list-header>
         <ion-item>
-          <ion-range pin min="1" step="0.1" max="2" id="customLabel"><span slot="pin"></slot></ion-range>
+          <ion-range pin min="1" step="0.1" max="2" id="customLabel"></ion-range>
         </ion-item>
       </ion-list>
 
