add more keyboard controls and tests

--- a/core/src/components/segment/test/a11y/index.html
+++ b/core/src/components/segment/test/a11y/index.html
@@ -13,19 +13,24 @@
   </head>
 
   <body>
-    <main>
+    <ion-app>
       <h1>Segment</h1>
-      <ion-segment aria-label="Tab Options" color="dark" value="reading-list">
-        <ion-segment-button value="bookmarks">
-          <ion-label>Bookmarks</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="reading-list">
-          <ion-label>Reading List</ion-label>
-        </ion-segment-button>
-        <ion-segment-button value="shared-links">
-          <ion-label>Shared Links</ion-label>
-        </ion-segment-button>
-      </ion-segment>
-    </main>
+      <ion-content>
+        <ion-segment aria-label="Tab Options" color="dark" value="reading-list">
+          <ion-segment-button value="bookmarks">
+            <ion-label>Bookmarks</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="reading-list">
+            <ion-label>Reading List</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="shared-links">
+            <ion-label>Shared Links</ion-label>
+          </ion-segment-button>
+        </ion-segment>
+        <ion-item>
+          <ion-input></ion-input>
+        </ion-item>
+      </ion-content>
+    </ion-app>
   </body>
 </html>
